rpa-builder/6.1/modules/ROOT/pages/toolbox-web-automation-web-session-chrome.adoc


= Web Session (Chrome)

include::partial$toolbox-web-automation-web-session.adoc[tag=intro]

[[properties]]
== Properties

// commonProperties Web Automation
include::partial$toolbox-web-automation-web-session.adoc[tag=commonProperties]
* *Additional Chrome arguments*
+
Define command-line parameters for _Google Chrome_. By default,
_disable-translate_ is set. This disables the automatic translation bar
feature of _Google Chrome_ because it may hinder _Workflow_ execution.
* *Alternative User Agent String*
+
Override the default User Agent string for Google Chrome.
* *Disable Unpacked Extensions support*
+
If you want to prevent the use
of unpacked extensions in the Chrome browser, select this checkbox.
The communication between Webdriver and Chrome is restricted as a
result. This usually does not have any effect on the Webdriver functions
we use.
* *Verbose Logging*

== Inbound Variables

* *Additional Chrome arguments*
* *Alternative User Agent String*
* *Web Session ID*
* *Initial URL*

== Outbound Variables

This action step has no outbound variables.

// Wizard
include::partial$toolbox-web-automation-web-session.adoc[tags=wizardCommon;!pageLoadStrategy]

=== Browser specific settings

image:toolbox-variable-web-automation-web-session-images/image5.png[50%, 50%, An image showing the browser specific settings]

The *Additional arguments* field enables you to pass arguments to the `Chrome.exe` application. Use `;` as a delimiter when specifying more than one parameter. You can specify a user data profile as an argument to start the web session using said profile, for example: `--user-data-dir=c:\YourFolder\UserData`. 

Use the *Alternative user agent string* to define an alternative user agent string. 

// activityWorkflowOverlappingWebSession
include::partial$toolbox-web-automation-web-session.adoc[tag=activityWorkflowOverlappingWebSession]

//closingWebSession
include::partial$toolbox-web-automation-web-session.adoc[tag=closingWebSession]

== See Also 

* xref:toolbox-web-automation-using-the-browser-wizard.adoc[Using the Web Browser Wizard]
* xref:toolbox-web-automation-common-properties-web-automation.adoc[Common Properties (Web Automation)]
